objects/LLC_BI__Loan__c.object
<CustomObject>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Product_Name__c</fullName>
        <description>Combined fields of product, line and type</description>
        <formula>text(LLC_BI__Product__c)  &amp; &quot; - &quot; &amp; text(LLC_BI__Product_Line__c)  &amp; &quot; - &quot; &amp; text(LLC_BI__Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Date__c</fullName>
        <label>Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HVCRE_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HVCRE Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Source__c</fullName>
        <label>Integration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_a_Test__c</fullName>
        <inlineHelpText>Please denote if this a Test Record.</inlineHelpText>
        <label>Is this a Test?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Firm_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is used to lookup Legal Firms that have been entered as a Relationship within nCino.  If you do not see your Legal Firm&apos;s name, please create them as a new Relationship and return to this field.</inlineHelpText>
        <label>Legal Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Legal Firm</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>Custom Migration ID for Loan object used by nCino Data Services</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Closing_Review_Comments__c</fullName>
        <inlineHelpText>Enter comments relevant to Post Closing Review findings.</inlineHelpText>
        <label>Post Closing Review Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Post_Closing_Review_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this field to list the user who completed the Post Closing Review.</inlineHelpText>
        <label>Post Closing Review Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Closing_Review_Completed_Date__c</fullName>
        <inlineHelpText>Enter the date that the Post Closing Review was completed.</inlineHelpText>
        <label>Post Closing Review Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Source_of_Repayment__c</fullName>
        <description>This was a requested field for our Baseline Config.</description>
        <label>Primary Source of Repayment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash flow from Operations</fullName>
                </value>
                <value>
                    <fullName>Lease Income</fullName>
                </value>
                <value>
                    <fullName>Liquidation of Collateral</fullName>
                </value>
                <value>
                    <fullName>Receivables</fullName>
                </value>
                <value>
                    <fullName>Reliance on Guarantors</fullName>
                </value>
                <value>
                    <fullName>Working Capital Turnover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reg_W_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates this transactions meets the criteria for Reg W Reportability.</inlineHelpText>
        <label>Reg W Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Market_Buyer__c</fullName>
        <label>Secondary Market Buyer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Source_of_Repayment__c</fullName>
        <description>This was a requested field added in our baseline configuration.</description>
        <label>Secondary Source of Repayment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash flow from Operations</fullName>
                </value>
                <value>
                    <fullName>Lease Income</fullName>
                </value>
                <value>
                    <fullName>Liquidation of Collateral</fullName>
                </value>
                <value>
                    <fullName>Receivables</fullName>
                </value>
                <value>
                    <fullName>Reliance on Guarantors</fullName>
                </value>
                <value>
                    <fullName>Working Capital Turnover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_for_Approval_Date__c</fullName>
        <inlineHelpText>This date is automatically populated when a loan is Submitted for Approval.  It cannot be manually updated.</inlineHelpText>
        <label>Submitted for Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tertiary_Source_of_Repayment__c</fullName>
        <description>This was a custom field requested to be added to the baseline configuration.</description>
        <label>Tertiary Source of Repayment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash flow from Operations</fullName>
                </value>
                <value>
                    <fullName>Lease Income</fullName>
                </value>
                <value>
                    <fullName>Liquidation of Collateral</fullName>
                </value>
                <value>
                    <fullName>Receivables</fullName>
                </value>
                <value>
                    <fullName>Reliance on Guarantors</fullName>
                </value>
                <value>
                    <fullName>Working Capital Turnover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Closer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to capture the assigned Closer. Added for the Commercial Accelerate project.</description>
        <label>Closer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cm_Completed_Application__c</fullName>
        <description>This field tracks the completed application date for the loan record. Added for the commercial accelerate project.</description>
        <label>Completed Application</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cm_Credit_Analyst_Underwriter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to capture the assigned Credit Analyst / Underwriter. Added for the Commercial Accelerate project.</description>
        <label>Credit Analyst / Underwriter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cm_Loan_Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to capture the loan assistant. Added for the Commercial Accelerate project.</description>
        <label>Loan Assistant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cm_Loan_Ops__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to capture the assigned Loan Ops. Added for the Commercial Accelerate project.</description>
        <label>Loan Ops</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cm_Memo_Modification_Count__c</fullName>
        <description>A hidden roll-up summary field to count the number of Under Review Change Memo records.  Used in Memo AP automation.</description>
        <inlineHelpText>A hidden roll-up summary field to count the number of Under Review Change Memo records.  Used in Memo AP automation.</inlineHelpText>
        <label>Memo Modification Count</label>
        <summaryFilterItems>
            <field>LLC_BI__Credit_Memo_Modifcation__c.LLC_BI__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Under Review</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Credit_Memo_Modifcation__c.LLC_BI__Loan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cm_Method_of_Doc_Prep__c</fullName>
        <description>Tracks method of document preparation. Added for the commercial accelerate project.</description>
        <label>Method of Doc Prep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney Prepared</fullName>
                </value>
                <value>
                    <fullName>Internally Prepared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Portfolio_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to capture the assigned Portfolio Manager. Added for the Commercial Accelerate project.</description>
        <label>Portfolio Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cm_Roll_Up_Adverse_Action__c</fullName>
        <description>Used to conditionally render the adverse action route on loans. Added for Commercial Accelerate project.</description>
        <label>Roll Up Adverse Action</label>
        <summaryForeignKey>LLC_BI__Adverse_Action__c.LLC_BI__Loan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cm_Today_s_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today&apos;s Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>Board_of_Directors_Loan</fullName>
        <filterScope>Queue</filterScope>
        <label>Board of Directors</label>
        <queue>Board_of_Directors</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CLA_Queue_Loan</fullName>
        <filterScope>Queue</filterScope>
        <label>CLA Queue</label>
        <queue>CLA_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Loan_Approval_Queue_Loan</fullName>
        <filterScope>Queue</filterScope>
        <label>Loan Approval Queue</label>
        <queue>Loan_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Loan_Committee_Loan</fullName>
        <filterScope>Queue</filterScope>
        <label>Loan Committee</label>
        <queue>Loan_Committee</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Shadow_Queue_Loan</fullName>
        <filterScope>Queue</filterScope>
        <label>Loan Approval Queue</label>
        <queue>Loan_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Stage_Approval_Loan_Committee</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Line__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__InterestRate__c</columns>
        <columns>LLC_BI__Risk_Grade__c</columns>
        <columns>LLC_BI__Stage__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Approval / Loan Committee</value>
        </filters>
        <label>Stage = Approval / Loan Committee</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Stage_Booked</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Line__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__InterestRate__c</columns>
        <columns>LLC_BI__Risk_Grade__c</columns>
        <columns>LLC_BI__Stage__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Booked</value>
        </filters>
        <filters>
            <field>LLC_BI__Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Stage = Booked</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Stage_Closing</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Line__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__InterestRate__c</columns>
        <columns>LLC_BI__Risk_Grade__c</columns>
        <columns>LLC_BI__Stage__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Closing</value>
        </filters>
        <label>Stage = Closing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Stage_Complete</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Line__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__InterestRate__c</columns>
        <columns>LLC_BI__Risk_Grade__c</columns>
        <columns>LLC_BI__Stage__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Stage = Complete</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Stage_Credit_Underwriting</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Line__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__InterestRate__c</columns>
        <columns>LLC_BI__Risk_Grade__c</columns>
        <columns>LLC_BI__Stage__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Credit Underwriting</value>
        </filters>
        <label>Stage = Credit Underwriting</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Stage_Doc_Prep</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Line__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__InterestRate__c</columns>
        <columns>LLC_BI__Risk_Grade__c</columns>
        <columns>LLC_BI__Stage__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Doc Prep</value>
        </filters>
        <label>Stage = Doc Prep</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Stage_Final_Review</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Line__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__InterestRate__c</columns>
        <columns>LLC_BI__Risk_Grade__c</columns>
        <columns>LLC_BI__Stage__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Final Review</value>
        </filters>
        <label>Stage = Final Review</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Stage_Processing</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Line__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__InterestRate__c</columns>
        <columns>LLC_BI__Risk_Grade__c</columns>
        <columns>LLC_BI__Stage__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Processing</value>
        </filters>
        <label>Stage = Processing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Stage_Proposal</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Line__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__InterestRate__c</columns>
        <columns>LLC_BI__Risk_Grade__c</columns>
        <columns>LLC_BI__Stage__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Proposal</value>
        </filters>
        <label>Stage = Proposal</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Stage_Qualification</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Line__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__InterestRate__c</columns>
        <columns>LLC_BI__Risk_Grade__c</columns>
        <columns>LLC_BI__Stage__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Qualification</value>
        </filters>
        <label>Stage = Qualification</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Commercial</fullName>
        <active>true</active>
        <label>Commercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commercial_Loan_Record_Type</fullName>
        <active>true</active>
        <description>This Record Type will Apply to Commercial Loans</description>
        <label>Commercial Loan Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consumer_Loan_Record_Type</fullName>
        <active>true</active>
        <description>This Record Type will Apply to Consumer Loans</description>
        <label>Consumer Loan Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Government_Guaranteed_Record_Type</fullName>
        <active>true</active>
        <description>This Record Type will Apply to Government Guaranteed Loans</description>
        <label>Government Guaranteed Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Guidance_LOC_Sub_Loan_Record_Type</fullName>
        <active>true</active>
        <description>This Record Type will Apply to Guidance LOC Sub Loans</description>
        <label>Guidance LOC Sub Loan Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Guidance_Line_Record_Type</fullName>
        <active>true</active>
        <description>This Record Type will Apply to Guidance Lines of Credit</description>
        <label>Guidance Line Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Start</fullName>
        <active>true</active>
        <description>This is the layout that&apos;s shown when &quot;New Record&quot; is clicked, only showing the basic info, and product selection info.</description>
        <label>Start</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Test_Product_Type_1</fullName>
        <active>true</active>
        <description>Used for Unit Tests</description>
        <label>Test Product Type 1 - Test Product 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Test_Product_Type_1v2</fullName>
        <active>true</active>
        <description>testing the product type broad match</description>
        <label>Test Product Type 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>nRetail__Retail_Loan</fullName>
        <active>true</active>
        <description>This record type is used to differentiate a retail loan, which has a distinct experience from other loan types.</description>
        <label>Retail Loan</label>
    </recordTypes>
    <validationRules>
        <fullName>Loan_Validation_01</fullName>
        <active>true</active>
        <description>Check to make sure the amount outstanding is not being set to be greater than the Amount (total) available</description>
        <errorConditionFormula>AND(
IF(LLC_BI__AmountOutstanding__c &gt; LLC_BI__Amount__c, true, false),
$User.No_Validation__c = False)</errorConditionFormula>
        <errorDisplayField>LLC_BI__AmountOutstanding__c</errorDisplayField>
        <errorMessage>Amount Outstanding cannot exceed the maximum Amount available - LV01</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loan_Validation_02</fullName>
        <active>true</active>
        <description>Ensure that Interest rate is not above the ceiling rate.</description>
        <errorConditionFormula>AND (
LLC_BI__Rate_Ceiling__c &gt;= 0,
(LLC_BI__InterestRate__c &gt;  LLC_BI__Rate_Ceiling__c),
$User.No_Validation__c = False
)</errorConditionFormula>
        <errorDisplayField>LLC_BI__InterestRate__c</errorDisplayField>
        <errorMessage>Please ensure that the interest rate for this loan is not above the ceiling rate - LV02</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loan_Validation_03</fullName>
        <active>true</active>
        <description>Ensure that Interest rate is not below the floor rate.</description>
        <errorConditionFormula>AND (
!ISNULL(LLC_BI__Rate_Floor__c),
(LLC_BI__InterestRate__c &lt; LLC_BI__Rate_Floor__c),
$User.No_Validation__c = False
)</errorConditionFormula>
        <errorDisplayField>LLC_BI__InterestRate__c</errorDisplayField>
        <errorMessage>Please ensure that the interest rate for this loan is not below the floor rate - LV03</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loan_Validation_04</fullName>
        <active>true</active>
        <description>Prevents Users from manually selecting the Approval / Loan Committee Stage.</description>
        <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED (LLC_BI__Stage__c)),
ISPICKVAL(LLC_BI__Stage__c, &quot;Approval / Loan Committee&quot;), TRUE)</errorConditionFormula>
        <errorDisplayField>LLC_BI__Stage__c</errorDisplayField>
        <errorMessage>You Cannot Manually Change the Loan Stage to Approval / Loan Committee. Please Ensure That All Information is Accurate and Press the &apos;Submit for Approval&apos; Button at the Top of the Page. - LV04</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loan_Validation_05</fullName>
        <active>true</active>
        <description>A Loan Number is Required Prior to Changing the Loan Stage to &apos;Booked&apos;</description>
        <errorConditionFormula>AND(
ISPICKVAL(LLC_BI__Stage__c , &apos;Booked&apos;),
ISBLANK(LLC_BI__lookupKey__c),
$User.No_Validation__c = False)</errorConditionFormula>
        <errorDisplayField>LLC_BI__Stage__c</errorDisplayField>
        <errorMessage>A Loan Number is Required Prior to Changing the Loan Stage to &apos;Booked&apos; - LV05</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loan_Validation_06</fullName>
        <active>true</active>
        <description>You Cannot Manually Change the Loan to a Post Approval Stage. The Loan Must be Approved by pressing the &apos;Submit for Approval&apos; Button at the top of the page.</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(LLC_BI__Stage__c , &apos;Processing&apos;),
ISPICKVAL(LLC_BI__Stage__c , &apos;Doc Prep&apos;),
ISPICKVAL(LLC_BI__Stage__c , &apos;Closing&apos;)),
ISBLANK(LLC_BI__Credit_Approval_Date__c),
$User.No_Validation__c = False)</errorConditionFormula>
        <errorDisplayField>LLC_BI__Stage__c</errorDisplayField>
        <errorMessage>You Cannot Manually Change the Loan to a Post Approval Stage. The Loan Must be Approved by pressing the &apos;Submit for Approval&apos; Button at the top of the page. - LV06</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loan_Validation_07</fullName>
        <active>true</active>
        <description>Ensure that the rate ceiling is higher or equal to the floor rate.</description>
        <errorConditionFormula>AND (
   !ISNULL(LLC_BI__Rate_Ceiling__c),
   !ISNULL(LLC_BI__Rate_Floor__c),
   (LLC_BI__Rate_Ceiling__c &lt; LLC_BI__Rate_Floor__c),
$User.No_Validation__c = False
)</errorConditionFormula>
        <errorDisplayField>LLC_BI__Rate_Ceiling__c</errorDisplayField>
        <errorMessage>Please ensure that the rate ceiling is higher or equal to the floor rate - LV07</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loan_Validation_09</fullName>
        <active>false</active>
        <description>Renewed Loans with a Status of &apos;Superseded&apos; cannot be edited</description>
        <errorConditionFormula>AND(
NOT(ISNEW()),
NOT(ISCHANGED(LLC_BI__Status__c)),
ISPICKVAL(LLC_BI__Status__c , &apos;Superseded&apos;),
$User.No_Validation__c = False)</errorConditionFormula>
        <errorMessage>This Loan has been Superseded and cannot be edited.  Please review the most recent Renewal or contact your Administrator for more information. - LV09</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loan_Validation_10</fullName>
        <active>true</active>
        <description>Prevents users from marking Is Review Ready to True in a post-approval loan stage.</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(LLC_BI__Stage__c, &apos;Processing&apos;),
ISPICKVAL(LLC_BI__Stage__c, &apos;Doc Prep&apos;),
ISPICKVAL(LLC_BI__Stage__c, &apos;Closing&apos;),
ISPICKVAL(LLC_BI__Stage__c, &apos;Boarding&apos;),
ISPICKVAL(LLC_BI__Stage__c, &apos;Booked&apos;)
),
LLC_BI__Is_Review_Ready__c = True,
$User.No_Workflow__c = False
)</errorConditionFormula>
        <errorMessage>Is Review Ready cannot be marked True in a post-approval loan stage.</errorMessage>
    </validationRules>
</CustomObject>